--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- About Section  -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">About Me</h2>
             <div class="about-content">
                <div class="column left">
                     <img src="images/Moshe-profile pic.jpeg" alt="">
